--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,18 +34,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  hive:
-  hive_flutter:
-  path_provider:
-  provider:
-  flutter_slidable:
-  build_runner:
-  hive_generator:
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.2
+  provider: ^6.1.2
+  flutter_slidable: ^3.0.1
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.2
+
+
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
